docs/1.0.0/_sources/api/gwpy.timeseries.StateVectorDict.rst.txt


StateVectorDict
===============================

.. currentmodule:: gwpy.timeseries

.. autoclass:: StateVectorDict
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~StateVectorDict.span

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~StateVectorDict.append
      ~StateVectorDict.clear
      ~StateVectorDict.copy
      ~StateVectorDict.crop
      ~StateVectorDict.fetch
      ~StateVectorDict.find
      ~StateVectorDict.from_nds2_buffers
      ~StateVectorDict.fromkeys
      ~StateVectorDict.get
      ~StateVectorDict.items
      ~StateVectorDict.keys
      ~StateVectorDict.move_to_end
      ~StateVectorDict.plot
      ~StateVectorDict.pop
      ~StateVectorDict.popitem
      ~StateVectorDict.prepend
      ~StateVectorDict.read
      ~StateVectorDict.resample
      ~StateVectorDict.setdefault
      ~StateVectorDict.step
      ~StateVectorDict.update
      ~StateVectorDict.values
      ~StateVectorDict.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: span

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: append
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: crop
   .. automethod:: fetch
   .. automethod:: find
   .. automethod:: from_nds2_buffers
   .. automethod:: fromkeys
   .. automethod:: get
   .. automethod:: items
   .. automethod:: keys
   .. automethod:: move_to_end
   .. automethod:: plot
   .. automethod:: pop
   .. automethod:: popitem
   .. automethod:: prepend
   .. automethod:: read
   .. automethod:: resample
   .. automethod:: setdefault
   .. automethod:: step
   .. automethod:: update
   .. automethod:: values
   .. automethod:: write

   
   